Prevent title from overflowing container

--- a/src/style.css
+++ b/src/style.css
@@ -127,6 +127,9 @@ nav .leading {
 nav .title {
   grid-area: title;
   text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 nav .trailing {
   grid-area: trailing;
